brat/test/golden/error/inconsistentclauses.brat.golden
Error in test/golden/error/inconsistentclauses.brat@FC {start = Pos {line = 1, col = 1}, end = Pos {line = 3, col = 9}}:
f(Bool, Nat) -> Nat
^^^^^^^^^^^^^^^^^^^
f(true, n) = 1
^^^^^^^^^^^^^^
f(b) = 2
^^^^^^^^

  Unification error: Pattern doesn't match expected length for constructor args

